add G1垃圾收集相关算法机日志